--- a/index.html
+++ b/index.html
@@ -82,8 +82,106 @@
 
             </div>
 
+            <div class="card">
+                <img src="https://picsum.photos/300/200" alt="">
+
+            </div>
+
+            <div class="card">
+                <img src="https://picsum.photos/300/200" alt="">
+
+            </div>
+
+            <div class="card">
+                <img src="https://picsum.photos/300/200" alt="">
+
+            </div>
+
+            <div class="card">
+                <img src="https://picsum.photos/300/200" alt="">
+
+            </div>
+
+            <div class="card">
+                <img src="https://picsum.photos/300/200" alt="">
+
+            </div>
+
+            <div class="card">
+                <img src="https://picsum.photos/300/200" alt="">
+
+            </div>
+
+            <div class="card">
+                <img src="https://picsum.photos/300/200" alt="">
+
+            </div>
+
+            <div class="card">
+                <img src="https://picsum.photos/300/200" alt="">
+
+            </div>
+
+            <div class="card">
+                <img src="https://picsum.photos/300/200" alt="">
+
+            </div>
+
+            <div class="card">
+                <img src="https://picsum.photos/300/200" alt="">
+
+            </div>
+
+            <div class="card">
+                <img src="https://picsum.photos/300/200" alt="">
+
+            </div>
+
+            <div class="card">
+                <img src="https://picsum.photos/300/200" alt="">
+
+            </div>
+
+            <div class="card">
+                <img src="https://picsum.photos/300/200" alt="">
+
+            </div>
+
+            <div class="card">
+                <img src="https://picsum.photos/300/200" alt="">
+
+            </div>
+
+            <div class="card">
+                <img src="https://picsum.photos/300/200" alt="">
+
+            </div>
+
+            <div class="card">
+                <img src="https://picsum.photos/300/200" alt="">
+
+            </div>
+
+            <div class="card">
+                <img src="https://picsum.photos/300/200" alt="">
+
+            </div>
+
+            <div class="card">
+                <img src="https://picsum.photos/300/200" alt="">
+
+            </div>
+
+            <div class="card">
+                <img src="https://picsum.photos/300/200" alt="">
+
+            </div>
+
         </div>
     </main>
 
+    <footer>
+
+    </footer>
 </body>
 </html>
