--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zoolean</title>
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <header>
@@ -18,170 +19,140 @@
         <div class="card-container">  
             <div class="card">
                 <img src="https://picsum.photos/300/200" alt="">
-
+                <span class="text"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
             </div>
 
             <div class="card">
                 <img src="https://picsum.photos/300/200" alt="">
-
+                <span class="text"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
             </div>
 
             <div class="card">
                 <img src="https://picsum.photos/300/200" alt="">
-
+                <span class="text"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
             </div>
 
             <div class="card">
                 <img src="https://picsum.photos/300/200" alt="">
-
+                <span class="text"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
             </div>
 
             <div class="card">
                 <img src="https://picsum.photos/300/200" alt="">
-
+                <span class="text"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
             </div>
 
             <div class="card">
                 <img src="https://picsum.photos/300/200" alt="">
-
+                <span class="text"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
             </div>
 
             <div class="card">
                 <img src="https://picsum.photos/300/200" alt="">
-
+                <span class="text"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
             </div>
 
             <div class="card">
                 <img src="https://picsum.photos/300/200" alt="">
-
+                <span class="text"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
             </div>
 
             <div class="card">
                 <img src="https://picsum.photos/300/200" alt="">
-
+                <span class="text"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
             </div>
 
             <div class="card">
                 <img src="https://picsum.photos/300/200" alt="">
-
+                <span class="text"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
             </div>
 
             <div class="card">
                 <img src="https://picsum.photos/300/200" alt="">
-
+                <span class="text"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
             </div>
 
             <div class="card">
                 <img src="https://picsum.photos/300/200" alt="">
-
+                <span class="text"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
             </div>
 
 
             <div class="card">
                 <img src="https://picsum.photos/300/200" alt="">
-
+                <span class="text"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
             </div>
 
             <div class="card">
                 <img src="https://picsum.photos/300/200" alt="">
-
+                <span class="text"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
             </div>
 
             <div class="card">
                 <img src="https://picsum.photos/300/200" alt="">
-
+                <span class="text"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
             </div>
 
             <div class="card">
                 <img src="https://picsum.photos/300/200" alt="">
-
+                <span class="text"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
             </div>
 
             <div class="card">
                 <img src="https://picsum.photos/300/200" alt="">
-
+                <span class="text"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
             </div>
 
             <div class="card">
                 <img src="https://picsum.photos/300/200" alt="">
-
+                <span class="text"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
             </div>
 
             <div class="card">
                 <img src="https://picsum.photos/300/200" alt="">
-
+                <span class="text"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
             </div>
 
             <div class="card">
                 <img src="https://picsum.photos/300/200" alt="">
-
+                <span class="text"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
             </div>
 
             <div class="card">
                 <img src="https://picsum.photos/300/200" alt="">
-
+                <span class="text"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
             </div>
 
             <div class="card">
                 <img src="https://picsum.photos/300/200" alt="">
-
+                <span class="text"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
             </div>
 
             <div class="card">
                 <img src="https://picsum.photos/300/200" alt="">
-
+                <span class="text"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
             </div>
 
             <div class="card">
                 <img src="https://picsum.photos/300/200" alt="">
-
-            </div>
-
-            <div class="card">
-                <img src="https://picsum.photos/300/200" alt="">
-
-            </div>
-
-            <div class="card">
-                <img src="https://picsum.photos/300/200" alt="">
-
-            </div>
-
-            <div class="card">
-                <img src="https://picsum.photos/300/200" alt="">
-
-            </div>
-
-            <div class="card">
-                <img src="https://picsum.photos/300/200" alt="">
-
-            </div>
-
-            <div class="card">
-                <img src="https://picsum.photos/300/200" alt="">
-
-            </div>
-
-            <div class="card">
-                <img src="https://picsum.photos/300/200" alt="">
-
-            </div>
-
-            <div class="card">
-                <img src="https://picsum.photos/300/200" alt="">
-
-            </div>
-
-            <div class="card">
-                <img src="https://picsum.photos/300/200" alt="">
-
+                <span class="text"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
             </div>
 
         </div>
     </main>
 
     <footer>
+        <div class="left-side">
+            <div id="mic-button">
+                <div>
+                    <i class="fa-solid fa-microphone"></i>
+                    <h6>Mute</h6>
+                </div>
+                <i class="fa-solid fa-chevron-up"></i>
+            </div>
 
+        
+        </div>
     </footer>
 </body>
 </html>
